User Management/k8s/user_management-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management-ingress
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/https-redirect-status-code: "302"
spec:
  rules:
    - host: user-management
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-management-service
                port:
                  number: 80
